Updating number of producers/consumers